--- a/aidbox-forms/aidbox-forms-smart-launch-2/package.json
+++ b/aidbox-forms/aidbox-forms-smart-launch-2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/logging": "^11.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
